Add blank 3d unity project

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /Temp
 /Library
 /Builds
+/UserSettings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -70,4 +71,3 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
